--- a/MidTerm/MidTerm/Properties/Resources.resx
+++ b/MidTerm/MidTerm/Properties/Resources.resx
@@ -265,4 +265,13 @@
   <data name="_36" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\36.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="egg" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\egg.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="fly2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\fly2.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="POSSTER" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\POSSTER.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
